EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==4/19/2009==
Wolftousen: Player Flurry rate was slightly increased
Wolftousen: Player Flurry messages will now show up as red text, but use the same filter as NPC flurry messages
Wolftousen: Rage Volley no longer requires you to have an thrown weapon in your ranged slot
Wolftousen: Rage Volley now uses the proper damage calculation and is not based on the item you have in the ranged slot
Wolftousen: Rave Volley can no longer be dodged/blocked/parried/reposted.
Wolftousen: Procs from Buffs have been tweaked to go off more often Wolftousen: Players will now receive the "proper" bonus HP for stamina above 255.
Wolftousen: Knight class Tactical Mastery AA was implemented and should now give the strike through message 
renoofturks: Created rule Aggro:StunAggroMod to dial in on aggro of stun based attacks.
cavedude: Reverse DS and some DS will now cause aggro on intial cast.
realityincarnate: Controllable boats should now work. Please see: http://eqemulator.net/forums/showthread.php?p=167892#post167892 for additonal information.
realityincarnate: Safe fall skill up is now checked on failure.

Optional SQL:

INSERT INTO rule_values VALUES(1,'Aggro:StunAggroMod',750);

==4/18/2009==
Derision: Changed Account Session Limiting to kick off the old connection and allow the new one.
drakelord: Rest State HP and MP Bonus
Derision: SoF - Combat/Rest state indicator now works.
Derision: No longer need to zone for /corpse to work.
Derision: Fixed Bazaar bug.

Optional SQL:

INSERT INTO rule_values VALUES(1,'Character:RestRegenPercent',0);
INSERT INTO rule_values VALUES(1,'Character:RestRegenTimeToActivate',30);

==4/13/2009==
Congdar: Bots - Fix release vs. debug compile for focus effects, updated bots to new attack code.

==4/13/2009==
Trevius: SoF - Corrected corpse looting slots so that the correct item is looted when there are multiple on a corpse